# ChangeLog for x11-terms/clusterssh
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/clusterssh/Attic/ChangeLog,v 1.6 2005/05/24 23:32:30 spyderous Exp $

  24 May 2005; Donnie Berkholz <spyderous@gentoo.org>;
  clusterssh-2.17.ebuild:
  (#91192) Stable on x86.

*clusterssh-2.17 (29 Oct 2004)

  29 Oct 2004; <voxus@gentoo.org> -clusterssh-2.14.ebuild,
  +clusterssh-2.17.ebuild:
  Version bump, closes #69264.

  02 Sep 2004; <pvdabeel@gentoo.org> clusterssh-2.14.ebuild,
  clusterssh-2.16.ebuild:
  PPC stable profile update

*clusterssh-2.16 (21 Jul 2004)

  21 Jul 2004; Konstantin Arkhipov <voxus@gentoo.org> +clusterssh-2.16.ebuild:
  Version bump, closes #61156.

  16 Jul 2004; David Holm <dholm@gentoo.org> clusterssh-2.14.ebuild:
  Added to ~ppc.

*clusterssh-2.14 (13 Jul 2004)

  13 Jul 2004; Michael Imhof <tantive@gentoo.org> +clusterssh-2.14.ebuild:
  Initial import. Closes #52728.
