@@ -1,6 +1,8 @@
-MD5 251b47f5a8422f0e1d20002bd44ff488 ChangeLog 961
+MD5 99b4fe6fd01d73f7ef47dda88c4126f0 ChangeLog 1101
+MD5 c7f9172e4d5b84f0fcb309bb7e5c3469 clusterssh-2.20.ebuild 615
 MD5 e9aac9eaf5fa1a3a4160319323124451 clusterssh-2.16.ebuild 601
 MD5 41664043c4624dedcfeeb07950f08d13 metadata.xml 312
 MD5 bfc42d08e2fc144308804b4bc34f9653 clusterssh-2.17.ebuild 597
 MD5 390bc8c1c363ba3a2fcab0ca45ada5da files/digest-clusterssh-2.17 66
 MD5 65815a93674259966a963cc85ccdd022 files/digest-clusterssh-2.16 71
+MD5 baf31be065a0252de3cdafaff51fe32b files/digest-clusterssh-2.20 66
