@@ -1,6 +1,12 @@
 # ChangeLog for x11-terms/clusterssh
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/clusterssh/Attic/ChangeLog,v 1.6 2005/05/24 23:32:30 spyderous Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/clusterssh/Attic/ChangeLog,v 1.7 2005/05/24 23:40:26 spyderous Exp $
+
+*clusterssh-2.20 (24 May 2005)
+
+  24 May 2005; Donnie Berkholz <spyderous@gentoo.org>;
+  +clusterssh-2.20.ebuild:
+  (#91192) Version bump.
 
   24 May 2005; Donnie Berkholz <spyderous@gentoo.org>;
   clusterssh-2.17.ebuild:
